--- a/app/src/main/res/layout/team_card_list_medium.xml
+++ b/app/src/main/res/layout/team_card_list_medium.xml
@@ -4,8 +4,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_width="200dp"
+    android:layout_height="75dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="3dp"
     android:layout_marginRight="5dp"
@@ -22,26 +22,30 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/cardTeamSmallImgProfile"
-            android:layout_width="65dp"
-            android:layout_height="65dp"
-            android:layout_marginStart="16dp"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/ysr_empty_profile_icon_blue"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/cardTeamSmallTxtName"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.088" />
 
         <TextView
             android:id="@+id/cardTeamSmallTxtName"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_height="0dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
             android:drawablePadding="25dp"
+            android:gravity="center"
             android:text="Team Name"
-            android:textSize="22sp"
+            android:textAlignment="textStart"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/cardTeamSmallTxtOrg"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
@@ -50,7 +54,8 @@
             android:id="@+id/cardTeamSmallImgArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="4dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -61,14 +66,14 @@
             android:id="@+id/cardTeamSmallTxtOrg"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
+            android:layout_marginBottom="1dp"
             android:text="Homewood Soccer Club"
             android:textSize="12sp"
-            app:layout_constraintEnd_toStartOf="@+id/cardTeamSmallImgArrow"
-            app:layout_constraintHorizontal_bias="0.015"
-            app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgIconOne"
-            app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallTxtName" />
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/cardTeamSmallImgProfile" />
 
         <TextView
             android:id="@+id/cardTeamSmallTxtEmail"
@@ -78,6 +83,7 @@
             android:layout_marginBottom="8dp"
             android:text="lucas.romeo@gmail.com"
             android:textSize="12sp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/cardTeamSmallImgArrow"
             app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgIconTwo"
@@ -89,6 +95,7 @@
             android:layout_width="18dp"
             android:layout_height="15dp"
             android:layout_marginStart="8dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/cardTeamSmallImgProfile"
             app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
             app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallImgIconOne"
@@ -102,6 +109,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
             android:tint="#FF0000"
+            android:visibility="gone"
             app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
             app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallTxtName"
             app:srcCompat="@drawable/org_blue" />
