--- a/app/src/main/res/layout/sport_card_list_medium.xml
+++ b/app/src/main/res/layout/sport_card_list_medium.xml
@@ -4,59 +4,52 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="65dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="3dp"
     android:layout_marginRight="5dp"
     android:layout_marginBottom="3dp"
+    android:background="@color/ysrWindowBackground"
+    android:backgroundTint="@color/ysrWindowBackground"
+    app:cardBackgroundColor="@color/ysrWindowBackground"
     app:cardCornerRadius="5dp"
     app:cardElevation="5dp"
-    app:cardMaxElevation="5dp">
-
+    app:cardMaxElevation="0dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="#00FFFFFF">
 
         <TextView
             android:id="@+id/cardSportTxtSportName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:drawablePadding="25dp"
             android:gravity="center"
             android:text="Soccer"
             android:textSize="25sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.234"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.483" />
-
-        <ImageView
-            android:id="@+id/cardSportImgArrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.924"
-            app:layout_constraintStart_toEndOf="@+id/cardSportTxtSportName"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.488"
-            app:srcCompat="@drawable/button_arrow_right_small" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/cardSportImgSportIcon"
             android:layout_width="43dp"
             android:layout_height="39dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cardSportTxtSportName"
-            app:layout_constraintHorizontal_bias="0.64"
-            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/cardSportTxtSportName"
+            app:layout_constraintEnd_toEndOf="@+id/cardSportTxtSportName"
+            app:layout_constraintStart_toStartOf="@+id/cardSportTxtSportName"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/soccer_ball_icon" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
