--- a/app/src/main/res/layout/ludi_dashboard_fragment.xml
+++ b/app/src/main/res/layout/ludi_dashboard_fragment.xml
@@ -11,20 +11,11 @@
     android:background="@color/ysrWindowBackground">
 
     <include
-        android:id="@+id/includeUserProfileHeader"
-        layout="@layout/ludi_banner"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <include
         android:id="@+id/includeYsrListViewSports"
         layout="@layout/ludi_recycler_card_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:background="@color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +31,16 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/includeYsrListViewSports" />
+
+    <include
+        android:id="@+id/includeUserProfileHeader"
+        layout="@layout/ludi_banner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
