--- a/app/src/main/res/layout/ludi_recycler_card_view.xml
+++ b/app/src/main/res/layout/ludi_recycler_card_view.xml
@@ -7,14 +7,14 @@
     android:id="@+id/ysrTitleListView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/ysrWindowBackground"
+    android:background="#00FAFAFA"
     android:orientation="vertical">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/ysrMainLayoutTitleListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/ysrWindowBackground">
+        android:background="#00FAFAFA">
 
         <TextView
             android:id="@+id/ysrTxtTitle"
