--- a/app/src/main/res/layout/team_card_list_medium.xml
+++ b/app/src/main/res/layout/team_card_list_medium.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="200dp"
+    android:id="@+id/cardTeamSmallRoot"
+    android:layout_width="175dp"
     android:layout_height="75dp"
     android:layout_marginLeft="5dp"
     android:layout_marginTop="3dp"
@@ -41,7 +43,7 @@
             android:gravity="center"
             android:text="Team Name"
             android:textAlignment="textStart"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/cardTeamSmallTxtOrg"
             app:layout_constraintEnd_toEndOf="parent"
@@ -68,6 +70,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="1dp"
             android:text="Homewood Soccer Club"
+            android:textAlignment="center"
             android:textSize="12sp"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
