--- a/app/src/main/res/layout/team_card_list_medium.xml
+++ b/app/src/main/res/layout/team_card_list_medium.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cardTeamSmallRoot"
@@ -11,11 +10,11 @@
     android:layout_marginLeft="5dp"
     android:layout_marginTop="3dp"
     android:layout_marginRight="5dp"
-    android:layout_marginBottom="3dp"
-    app:cardBackgroundColor="#F9FDFD"
+    android:layout_marginBottom="16dp"
+    app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="5dp"
-    app:cardElevation="5dp"
-    app:cardMaxElevation="5dp">
+    app:cardElevation="10dp"
+    app:cardMaxElevation="15dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
