--- a/app/src/main/res/layout/ludi_dashboard_fragment.xml
+++ b/app/src/main/res/layout/ludi_dashboard_fragment.xml
@@ -3,12 +3,13 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="50dp">
 
     <LinearLayout
         android:id="@+id/linearLayoutTop"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:background="@color/transparent"
         android:orientation="vertical">
 
@@ -22,19 +23,6 @@
             android:layout_marginEnd="16dp"
             android:background="@color/transparent"
             android:paddingBottom="16dp" />
-
-        <include
-            android:id="@+id/includeYsrListViewSports"
-            layout="@layout/ludi_recycler_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <include
-            android:id="@+id/includeYsrListViewTeams"
-            layout="@layout/ludi_recycler_card_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone" />
 
     </LinearLayout>
 
