layout foundation building

--- a/app/src/main/res/layout/ludi_banner_two.xml
+++ b/app/src/main/res/layout/ludi_banner_two.xml
@@ -30,7 +30,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/arizona_sunset" />
+            app:srcCompat="@drawable/home_banner" />
 
         <Button
             android:id="@+id/btnExpanderMore"
