--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 <!--    <color name="ysrWindowBackground">#F6F6F5</color>-->
 <!--    <color name="ysrWindowBackground">#effbfa</color>-->
     <color name="ysrWindowBackground">#FAFAFA</color>
+    <color name="darkWhite">#CDCDCD</color>
 
     <color name="vintageBlue">#80A1C2</color>
     <color name="vintageRed">#BF4146</color>
