--- a/app/src/main/res/layout/ludi_dashboard_fragment.xml
+++ b/app/src/main/res/layout/ludi_dashboard_fragment.xml
@@ -14,7 +14,7 @@
         android:orientation="vertical">
 
         <include
-            android:id="@+id/includeUserProfileHeader"
+            android:id="@+id/includeHeader"
             layout="@layout/ludi_banner_two"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
