--- a/app/src/main/res/layout/ludi_dashboard_fragment_new.xml
+++ b/app/src/main/res/layout/ludi_dashboard_fragment_new.xml
@@ -1,50 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <!-- Created by ChazzCoin : November 2022 -->
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/ludiDashboardFragmentLinearLayoutMain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/test_background">
+    android:orientation="vertical">
 
     <include
-        android:id="@+id/includeYsrListViewSports"
-        layout="@layout/ludi_recycler_card_view"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/includeUserProfileHeader" />
-
-    <include
-        android:id="@+id/includeYsrListViewTeams"
-        layout="@layout/ludi_recycler_card_view"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/includeYsrListViewSports" />
-
-    <include
-        android:id="@+id/includeUserProfileHeader"
+        android:id="@+id/includeHeader"
         layout="@layout/ludi_banner_two"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:background="@color/transparent"
-        android:paddingBottom="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:paddingBottom="16dp" />
 
+    <include
+        android:id="@+id/includeLudiCardView"
+        layout="@layout/ludi_parent_card_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
+        android:paddingBottom="0dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
