--- a/app/src/main/res/layout/profile_user.xml
+++ b/app/src/main/res/layout/profile_user.xml
@@ -70,7 +70,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <include
-            android:id="@+id/includeUserProfileHeader"
+            android:id="@+id/includeHeader"
             layout="@layout/card_user_header_with_ratingbar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
