--- a/app/src/main/res/layout/ludi_recycler_card_view.xml
+++ b/app/src/main/res/layout/ludi_recycler_card_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<io.usys.report.ui.views.recyclerViews.LudiRecyclerCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<io.usys.report.ui.views.recyclerViews.LudiRecyclerCardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ysrTitleListView"
@@ -35,11 +36,9 @@
             android:id="@+id/ysrRecycler"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.473"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ysrTxtTitle"
             app:layout_constraintVertical_bias="0.0"
