--- a/app/src/main/res/layout/team_card_list_medium.xml
+++ b/app/src/main/res/layout/team_card_list_medium.xml
@@ -1,124 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.facebook.shimmer.ShimmerFrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/cardTeamSmallRoot"
-    android:layout_width="175dp"
-    android:layout_height="75dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginTop="3dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginBottom="16dp"
-    app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="5dp"
-    app:cardElevation="10dp"
-    app:cardMaxElevation="15dp">
+    android:id="@+id/shimmer_view_container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:shimmer_base_alpha="1.0"
+    app:shimmer_auto_start="false">
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardTeamSmallRoot"
+        android:layout_width="175dp"
+        android:layout_height="75dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="16dp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="5dp"
+        app:cardMaxElevation="5dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/cardTeamSmallImgProfile"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:src="@drawable/ysr_empty_profile_icon_blue"
+                app:layout_constraintBottom_toBottomOf="@+id/cardTeamSmallTxtName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.088" />
+
+            <TextView
+                android:id="@+id/cardTeamSmallTxtName"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="8dp"
+                android:drawablePadding="25dp"
+                android:gravity="center"
+                android:text="Team Name"
+                android:textAlignment="textStart"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/cardTeamSmallTxtOrg"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_chainStyle="packed" />
+
+            <ImageView
+                android:id="@+id/cardTeamSmallImgArrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.492"
+                app:srcCompat="@drawable/button_arrow_right_small" />
+
+            <TextView
+                android:id="@+id/cardTeamSmallTxtOrg"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="1dp"
+                android:text="Homewood Soccer Club"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toStartOf="@+id/cardTeamSmallImgProfile" />
+
+            <TextView
+                android:id="@+id/cardTeamSmallTxtEmail"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="lucas.romeo@gmail.com"
+                android:textSize="12sp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/cardTeamSmallImgArrow"
+                app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgIconTwo"
+                app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallTxtOrg"
+                app:layout_constraintVertical_bias="0.47" />
+
+            <ImageView
+                android:id="@+id/cardTeamSmallImgIconTwo"
+                android:layout_width="18dp"
+                android:layout_height="15dp"
+                android:layout_marginStart="8dp"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="@+id/cardTeamSmallImgProfile"
+                app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
+                app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallImgIconOne"
+                app:layout_constraintVertical_bias="0.888"
+                app:srcCompat="@drawable/ysr_email_icon_red" />
+
+            <ImageView
+                android:id="@+id/cardTeamSmallImgIconOne"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                android:tint="#FF0000"
+                android:visibility="gone"
+                app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
+                app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallTxtName"
+                app:srcCompat="@drawable/org_blue" />
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/cardTeamSmallImgProfile"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:src="@drawable/ysr_empty_profile_icon_blue"
-            app:layout_constraintBottom_toBottomOf="@+id/cardTeamSmallTxtName"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.088" />
-
-        <TextView
-            android:id="@+id/cardTeamSmallTxtName"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:drawablePadding="25dp"
-            android:gravity="center"
-            android:text="Team Name"
-            android:textAlignment="textStart"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toTopOf="@+id/cardTeamSmallTxtOrg"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <ImageView
-            android:id="@+id/cardTeamSmallImgArrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.492"
-            app:srcCompat="@drawable/button_arrow_right_small" />
-
-        <TextView
-            android:id="@+id/cardTeamSmallTxtOrg"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="1dp"
-            android:text="Homewood Soccer Club"
-            android:textAlignment="center"
-            android:textSize="12sp"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="@+id/cardTeamSmallImgProfile" />
-
-        <TextView
-            android:id="@+id/cardTeamSmallTxtEmail"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="8dp"
-            android:text="lucas.romeo@gmail.com"
-            android:textSize="12sp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/cardTeamSmallImgArrow"
-            app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgIconTwo"
-            app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallTxtOrg"
-            app:layout_constraintVertical_bias="0.47" />
-
-        <ImageView
-            android:id="@+id/cardTeamSmallImgIconTwo"
-            android:layout_width="18dp"
-            android:layout_height="15dp"
-            android:layout_marginStart="8dp"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/cardTeamSmallImgProfile"
-            app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
-            app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallImgIconOne"
-            app:layout_constraintVertical_bias="0.888"
-            app:srcCompat="@drawable/ysr_email_icon_red" />
-
-        <ImageView
-            android:id="@+id/cardTeamSmallImgIconOne"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:tint="#FF0000"
-            android:visibility="gone"
-            app:layout_constraintStart_toEndOf="@+id/cardTeamSmallImgProfile"
-            app:layout_constraintTop_toBottomOf="@+id/cardTeamSmallTxtName"
-            app:srcCompat="@drawable/org_blue" />
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</com.facebook.shimmer.ShimmerFrameLayout>
 
 
